manifests/base/keycloak/deploy-keycloak.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: identity
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak-provisionner
          image: keycloak-provisionner
          resources:
            requests:
              cpu: 10m
              memory: 16Mi
            limits:
              cpu: 20m
              memory: 32Mi
          command: ["python"]
          args:
            - /opt/keycloak/provisioning.py
          volumeMounts:
            - mountPath: /var/run/secrets/keycloak
              name: keycloak-secrets
            - mountPath: /opt/keycloak/definitions
              name: keycloak-provisioning-secret
            - mountPath: /opt/keycloak/provisioning.py
              name: keycloak-provisioning-cm
              subPath: provisioning.py
        - name: keycloak
          image: keycloak
          args:
            - start
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 1000m
              memory: 1Gi
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 9000
            initialDelaySeconds: 30
          volumeMounts:
            - mountPath: /opt/keycloak/conf/keycloak.conf
              name: keycloak-main
              subPath: keycloak.conf
      volumes:
        - name: keycloak-secrets
          secret:
            secretName: keycloak-secrets
        - name: keycloak-main
          configMap:
            name: keycloak-main
        - name: keycloak-provisioning-cm
          configMap:
            name: keycloak-provisioning
        - name: keycloak-provisioning-secret
          secret:
            secretName: keycloak-provisioning
