manifests/base/keycloak/deploy-postgres.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: identity
  labels:
    app: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      securityContext:
        runAsUser: 61001
        runAsGroup: 61001
      containers:
        - name: postgres
          image: postgres
          ports:
            - name: sql
              containerPort: 5432
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 256Mi
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres
            - mountPath: /run/secrets/postgres
              name: postgres-secrets
              readOnly: true
      volumes:
        - name: postgres
          persistentVolumeClaim:
            claimName: postgres
        - name: postgres-secrets
          secret:
            secretName: postgres-secrets
