manifests/base/keycloak/svc-keycloak.yml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: identity
  labels:
    app: keycloak
    namespace: identity
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: keycloak
