manifests/base/keycloak/svc-postgres.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: identity
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: sql
